--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ node_js: stable
 
 script:
   - hexo clean
-  - hexo g
-  - hexo d
+
+after_script:
+  - sed -i "s/github_token/${github_token}/g" ./_config.yml
+  - cat _config.yml
+  - hexo g -d
 
 branches:
   only:
