--- a/themes/Sw-blog/_config.yml
+++ b/themes/Sw-blog/_config.yml
@@ -79,7 +79,7 @@ youyan:
 ## "on: true": 自动随机显示这5张图片
 ## "on: false": 自定义显示图片设置background_image: 5
 background:
-  on: false
+  on: true
   #on: false
   background_sum: 24
   background_image: 109
@@ -188,7 +188,7 @@ visit_counter:
   page_visit: 本页阅读量
 
 # A标签提示
-TipTitle: true
+TipTitle: false
 
 # Loading
 # Loading: true
