--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ index_generator:
   order_by: -date
   
 # Category & Tag
-default_category: uncategorized
+default_category: categorized
 category_map:
 tag_map:
 
