--- a/themes/Sw-blog/_config.yml
+++ b/themes/Sw-blog/_config.yml
@@ -77,9 +77,9 @@ youyan:
 ## "on: true": 自动随机显示这5张图片
 ## "on: false": 自定义显示图片设置background_image: 5
 background:
-  on: true
-  #on: false
-  background_sum: 24
+#  on: true
+  on: false
+#  background_sum: 24
   background_image: 109
 
 highlight_style:
