--- a/themes/Sw-blog/_config.yml
+++ b/themes/Sw-blog/_config.yml
@@ -12,7 +12,7 @@ menu:
 avatar: img/head.jpg
 
 # Small icon of Your site | 站点小图标地址
-favicon: https://raw.githubusercontent.com/lz330718637/Images/master/20180819231010.png
+favicon: img/head.jpg
 
 
 # Social info. Bar | 社交信息展示
