--- a/themes/Sw-blog/_config.yml
+++ b/themes/Sw-blog/_config.yml
@@ -6,6 +6,7 @@
 menu:
   博客首页: https://skyli-hz.github.io/
   文章归档: /archives
+  文章类别：/categories
   个人简历: /resume
 
 # Link to your avatar | 填写头像地址
@@ -134,7 +135,7 @@ friends:
 # 请在需要打赏的文章的md文件头部，设置属性reward: true
 
 # 打赏基础设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
-reward_type: 0
+reward_type: 1
 # 打赏wording
 reward_wording1: '纯属好玩'
 reward_wording2: '扫码打赏，你说多少就多少'
@@ -183,7 +184,7 @@ baidu_analytics:
 # http://ibruce.info/2015/04/04/busuanzi/
 visit_counter:
   on: true
-  #site_visit: 海贼到访数
+  site_visit: 博客到访量
   page_visit: 本页阅读量
 
 # A标签提示
