--- a/themes/Sw-blog/_config.yml
+++ b/themes/Sw-blog/_config.yml
@@ -6,7 +6,7 @@
 menu:
   博客首页: https://skyli-hz.github.io/
   文章归档: /archives
-  文章类别：/categories
+  文章类别: /categories
   个人简历: /resume
 
 # Link to your avatar | 填写头像地址
